# Paradict

./: .gitignore  Makefile  README.md  TODO.md  dune-project  paradict.opam  paradict.opam.template  plot.gpt
bench/: bench.ml  dune
lib/: dune  extensions.ml  paradict.ml  paradict.mli  paradict_intf.ml
test/: test.ml
tests/: dune  foo.ml  qcheck.ml  singleton_expected.dot  size12_expected.dot  test.ml
